[DOC] Corrected dark mode switch behaviour

--- a/src/scss/common/components/_custom-forms.scss
+++ b/src/scss/common/components/_custom-forms.scss
@@ -66,8 +66,7 @@
 
   // Background-color and (when enabled) gradient
   &::before {
-    position: relative;
-    left: 0;
+    left: -.625rem;
     border: $custom-control-indicator-border-size solid $custom-control-indicator-border-color;
   }
 
